--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@
             <div class="biography">
                 <h2 class="bio-title">PROFESSIONAL BIOGRAPHY</h2>
                 <div class="bio-content">
-                    <p>I'm currently pursuing an MSc in Data Science and AI at the University of Liverpool, where I'm completing my thesis on stock prediction and trading models. My academic foundation includes ACCA qualification with AA prizewinner status, where I developed expertise in financial analysis and auditing for international clients with multi-million dollar portfolios. This combination of rigorous financial training and cutting-edge AI research has shaped my approach to data-driven decision making across diverse domains.</p>
+                    <p>I'm a Data Science and AI postgraduate at the University of Liverpool, currently working on a thesis focused on predictive models for stock trading. Before diving into machine learning, I earned my ACCA qualification with AA prizewinner honors, developing deep experience in financial analysis and auditing for international clients managing multi-million dollar portfolios.</p>
+                    <p>My work lives at the intersection of finance and AI—where hard numbers meet smart algorithms. But I’m also driven by a broader ambition: to build systems that are not just intelligent, but sustainable. I'm an advocate for a solarpunk future—where technology harmonizes with nature to support both human well-being and environmental resilience.</p>
                     
-                    <p>Beyond technical expertise, I'm passionate about creating a <strong>"symbiotic techno-ecological future"</strong> and advocate for <strong>"ecotopia"</strong>—a vision where technology serves both human prosperity and environmental sustainability. This website showcases my projects spanning machine learning, financial modeling, and data visualization, along with articles exploring the intersection of technology, ecology, and society. I believe data science can be a powerful tool for building systems that are both economically resilient and environmentally regenerative.</p>
+                    <p>This portfolio highlights my projects in machine learning, financial modeling, and data visualization, alongside writing that explores the overlap between technology, ecology, and society. For me, data science isn’t just about optimization, it’s about shaping smarter, fairer, and greener futures.</p>
                 </div>
             </div>
             
